--- a/index2.html
+++ b/index2.html
@@ -78,6 +78,7 @@
                         <div class="searchInputs">
                             <input type="hidden" name="page" value="1">
                             <input type="hidden" name="size" value="30">
+                            <input type="hidden" name="id" value="0">
                             <input id="q" name="q" type="text" required placeholder="search for something">
                             <input class="urlFlag" type="checkbox" name="refreshCache" value="">
                         </div>
@@ -211,6 +212,8 @@
         <p>{{{s}}} <a class="treatmentLink" href="/index2.html?resource=treatments&treatmentId={{treatmentId}}">more</a></p>
     </details>
     {{/treatments}}
+
+    {{> templatePager}}
 </script>
 
 <!-- template for a single treatment -->
