added correct recordCount display

--- a/index2.html
+++ b/index2.html
@@ -184,7 +184,7 @@
 
 <!-- template for fulltext search of treatments -->
 <script id="templateTreatmentsFTSWithThumbnail" type="x-tmpl-mustache">
-    <h3>{{recordsFound}} records found</h3>
+    <h3>{{recordsFound}} records found. {{from}} to {{to}} shown below…</h3>
 
     {{#treatments}}
     <details open>
@@ -203,7 +203,7 @@
 
 <!-- template for fulltext search of treatments -->
 <script id="templateTreatmentsFTS" type="x-tmpl-mustache">
-    <h3>{{recordsFound}} records found</h3>
+    <h3>{{recordsFound}} records found. {{from}} to {{to}} shown below…</h3>
 
     {{#treatments}}
     <details open>
