added methods for fetching count of resources

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         </div>
 
                         <button id="ssGo" name="simpleSearch" class="searchButton">go</button>
-
+                        <div id="searchMessage"></div>
                         <div id="fSearch" class="off-none"></div>
                         <div class="searchChooser">
                             <a id="searchChooser" href="">switch to fancy search</a>
