--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <button id="ssGo" name="simpleSearch" class="searchButton">go</button>
                         <div id="searchMessage"></div>
                         <div id="fSearch" class="off-none"></div>
-                        <div class="searchChooser">
+                        <div class="searchChooser off-none">
                             <a id="searchChooser" href="">switch to fancy search</a>
                         </div>
                         <div id="refreshCacheWarning">This will refresh the cache; you probably don‘t want this.</div>
