proper uglifying and minifying

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <title>ocellus^3</title>
    
+    <link rel="stylesheet" href="leaflet/leaflet.css">
     <link rel="stylesheet" href="css/styles.min.css">
     <link rel="icon" type="image/png" href="img/ocellus.png">
 </head>
@@ -267,6 +268,7 @@
         </div>
     </script>
 
+    <script src="leaflet/leaflet.js"></script>
     <script src="js/config.js"></script>
     <script src="js/scripts.min.js"></script>
 </body>
