down for maintenance

--- a/index-dev.html
+++ b/index-dev.html
@@ -69,12 +69,11 @@
                     <div class="searchInputs">
                         <input type="hidden" name="page" value="1">
                         <input type="hidden" name="size" value="30">
-                        <input type="hidden" name="id" value="0">
+                        <!-- <input type="hidden" name="id" value="0"> -->
                         <input id="q" name="q" type="text" required placeholder="search for something">
                         <input class="urlFlag" type="checkbox" name="refreshCache" value="">
                     </div>
 
-                    <!-- <button id="ssGo" name="simpleSearch" class="searchButton">go</button> -->
                     <button id="ssGo" class="searchButton">go</button>
                     <div id="fSearch" class="off-none"></div>
                     <a id="searchChooser" class="searchChooser" href="">switch to fancy search</a>
