--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <a id="about-open" class="modal-toggle sub-title msg">about</a>
             </div>
 
+            <!--
             <form name="simpleSearch" class="searchContainer" id="ssForm" method="GET">
                 <nav id="resourceSelector">
                     <label for="resource-treatments" class="searchFocus">treatments</label>
@@ -59,17 +60,18 @@
                         <input type="hidden" name="page" value="1">
                         <input type="hidden" name="size" value="30">
                         <input type="hidden" name="id" value="0">
-                        <input id="q" name="q" type="text" required placeholder="search for something">
+                        <input id="q" name="q" type="text" required placeholder="search for something" disabled>
                         <input class="urlFlag" type="checkbox" name="refreshCache" value="">
                     </div>
 
-                    <!-- <button id="ssGo" name="simpleSearch" class="searchButton">go</button> -->
-                    <button id="ssGo" class="searchButton">go</button>
+                    <button id="ssGo" class="searchButton" disabled>go</button>
                     <div id="fSearch" class="off-none"></div>
                     <a id="searchChooser" class="searchChooser" href="">switch to fancy search</a>
                     <div id="refreshCacheWarning">This will refresh the cache; you probably don’t want this.</div>
                 </div>
             </form>
+            -->
+            
         </div>
 
         <div id="throbber" class="throbber hidden-panel"></div>
@@ -77,6 +79,9 @@
     <!-- <div class="grid-container full"> -->
     <article>
 
+        <section id="maintenance" style="text-align: center; padding: 4rem;">
+            <p>We'll be back soon as we've finished some housecleaning, upgrades and repairs.</p>
+        </section>
         <section id="about" class="hidden-panel">
             <a id="about-close" class="modal-toggle">close</a>
             <div class="modal-text">
@@ -283,6 +288,6 @@
 
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
     <script src="js/config.js"></script>
-    <script src="js/scripts.min.js"></script>
+    <!-- <script src="js/scripts.min.js"></script> -->
 </body>
 </html>
