images working again

--- a/index-dev.html
+++ b/index-dev.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="css/ocellus-treatment.css">
     <link rel="stylesheet" href="css/ocellus-taxon-tree.css">
     <link rel="stylesheet" href="css/ocellus-xml.css">
+    <link rel="stylesheet" href="css/ocellus-images.css">
+    <link rel="stylesheet" href="css/ocellus-pager.css">
    
     <link rel="icon" type="image/png" href="img/ocellus.png">
 </head>
