--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 <a id="about-open" class="modal-toggle sub-title msg">about</a>
             </div>
 
-            <!--
             <form name="simpleSearch" class="searchContainer" id="ssForm" method="GET">
                 <nav id="resourceSelector">
                     <label for="resource-treatments" class="searchFocus">treatments</label>
@@ -60,7 +59,7 @@
                         <input type="hidden" name="page" value="1">
                         <input type="hidden" name="size" value="30">
                         <input type="hidden" name="id" value="0">
-                        <input id="q" name="q" type="text" required placeholder="search for something" disabled>
+                        <input id="q" name="q" type="text" required placeholder="search for something">
                         <input class="urlFlag" type="checkbox" name="refreshCache" value="">
                     </div>
 
@@ -70,7 +69,6 @@
                     <div id="refreshCacheWarning">This will refresh the cache; you probably don’t want this.</div>
                 </div>
             </form>
-            -->
             
         </div>
 
@@ -79,9 +77,9 @@
     <!-- <div class="grid-container full"> -->
     <article>
 
-        <section id="maintenance" style="text-align: center; padding: 4rem;">
+        <!-- <section id="maintenance" style="text-align: center; padding: 4rem;">
             <p>We'll be back soon as we've finished some housecleaning, upgrades and repairs.</p>
-        </section>
+        </section> -->
         <section id="about" class="hidden-panel">
             <a id="about-close" class="modal-toggle">close</a>
             <div class="modal-text">
@@ -288,6 +286,6 @@
 
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg==" crossorigin=""></script>
     <script src="js/config.js"></script>
-    <!-- <script src="js/scripts.min.js"></script> -->
+    <script src="js/scripts.min.js"></script>
 </body>
 </html>
