--- a/dev/index.html
+++ b/dev/index.html
@@ -16,12 +16,12 @@
 
     <!-- all the css between ***************** get packaged into a single bundle for production -->
     <!-- ********************************************************* -->
-    <link rel="stylesheet" href="../Barebones-3.0.1/css/normalize.css">
-    <link rel="stylesheet" href="../Barebones-3.0.1/css/barebones.css">
-
+    <link rel="stylesheet" href="../libs/Barebones-3.0.1/css/normalize.css">
+    <link rel="stylesheet" href="../libs/Barebones-3.0.1/css/barebones.css">
     <!-- <link rel="stylesheet" href="node_modules/chart.js/dist/Chart.min.css">
     <link rel="stylesheet" href="node_modules/tabbyjs/dist/css/tabby-ui.min.css"> -->
-    <link rel="stylesheet" href="JavaScript-autoComplete/auto-complete.css">
+    <link rel="stylesheet" href="../libs/JavaScript-autoComplete/auto-complete.css">
+
     <link rel="stylesheet" href="css/o3-article.css">
     <link rel="stylesheet" href="css/o3-base.css">
     <link rel="stylesheet" href="css/o3-charts.css">
@@ -87,7 +87,7 @@
                 <div class="searchInputs">
                     <input name="q" type="search" required placeholder=""> 
                     <input name="refreshCache" class="urlFlag" type="checkbox" value="true">
-                    <input name="size" value="60" type="hidden">
+                    <input name="size" value="30" type="hidden">
                     <input name="page" value="1" type="hidden">
                     <input name="go" type="submit" value="GO">
                 </div> 
@@ -175,7 +175,7 @@
     </section>
 </article>
 
-<footer class="grid-container full"><img src="img/fish.jpg"></footer>
+<footer class="grid-container full"><img src="../img/fish.jpg"></footer>
 
 <!-- partials -->
 <script id="template-pager" type="x-tmpl-mustache">
@@ -367,12 +367,14 @@
 
 <!-- all the scripts between ********* get packaged into a single bundle in production -->
 <!-- ********************************************************* -->
-<script src="../js/lazysizes.min.js"></script>
+<script src="../libs/lazysizes.min.js"></script>
+<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script> -->
 <!-- <script src="node_modules/chart.js/dist/Chart.min.js"></script>
 <script src="node_modules/chartjs-plugin-datalabels/dist/chartjs-plugin-datalabels.min.js"></script>
 <script src="node_modules/tabbyjs/dist/js/tabby.polyfills.min.js"></script> -->
-<script src="../JavaScript-autoComplete/auto-complete.min.js"></script>
-<script src="../js/mustache.min.js"></script>
+<script src="../libs/JavaScript-autoComplete/auto-complete.min.js"></script>
+<script src="../libs/mustache.min.js"></script>
+
 <script src="js/o3-base.js"></script>
 <script src="js/o3-eventlisteners.js"></script>
 <script src="js/o3-utils.js"></script>
@@ -383,6 +385,17 @@
 <script type="text/javascript">
 window.onload = function(e) {
     BLR.base.init();
+
+    // lazy loads elements with default selector as '.lozad'
+    // const observer = window.lozad('.lazyload', {
+    //     load: function(el) {
+    //         console.log('loading element');
+
+    //         // Custom implementation to load an element
+    //         // e.g. el.src = el.getAttribute('data-src');
+    //     }
+    // }); 
+    // observer.observe();
 };
 </script>
 
