--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     
     <link rel="icon" type="image/png" href="img/ocellus.png">
 
-    <link rel="stylesheet" href="Barebones-3.0.1/css/normalize.css">
-    <link rel="stylesheet" href="Barebones-3.0.1/css/barebones.css">
+    <link rel="stylesheet" href="libs/Barebones-3.0.1/css/normalize.css">
+    <link rel="stylesheet" href="libs/Barebones-3.0.1/css/barebones.css">
 
     <!-- <link rel="stylesheet" href="node_modules/chart.js/dist/Chart.min.css">
     <link rel="stylesheet" href="node_modules/tabbyjs/dist/css/tabby-ui.min.css">
