carousel is working once again

--- a/dev/index.html
+++ b/dev/index.html
@@ -47,7 +47,7 @@
 <header>
     <div id="header" class="grid-container full">
         <div class="titleContainer">
-            <a href="/" class="title logo-intro">Ocellus<sup>3</sup></a>
+            <a href="index.html" class="title logo-intro">Ocellus<sup>3</sup></a>
             <a href="about.html" class="modal-open sub-title">about</a>
         </div>
 
@@ -173,6 +173,11 @@
         <div class="charts"></div>
         <div class="results"></div>
     </section>
+
+    <section id="carousel" class="panel resource hidden">
+        <div class="searchCriteria"></div>
+        <div class="results"></div>
+    </section>
 </article>
 
 <footer class="grid-container full"><img src="../img/fish.jpg"></footer>
@@ -215,6 +220,17 @@
         </figcaption>
     </figure>
     {{/figureCitations}}
+</div>
+</script>
+
+<script id="template-kein-preview" type="x-tmpl-mustache">
+<div class="kein-preview">
+    <ul>
+        <li>preview not available</li>
+        <li>aperçu non disponible</li>
+        <li>vista previa no disponible</li>
+        <li>Vorschau nicht verfügbar</li>
+    </ul>
 </div>
 </script>
 <!-- end partials -->
@@ -346,7 +362,13 @@
     <div id="masonry" class="masonry">
         {{#figures}}
         <figure class="item">
-            <a href="#carousel" class="carousel"><img src="../img/bug.gif" width="250" data-src="{{img250}}" class="lazyload" data-recid="{{recId}}"></a>
+            {{#img}}
+            <img src="../img/bug.gif" width="100%" data-src="{{img250}}" class="lazyload" data-recid="{{recId}}">
+            {{/img}}
+
+            {{^img}}
+            {{> template-kein-preview}}
+            {{/img}}
             
             <figcaption class="transition-050 opacity85 text">
                 <a class="transition-050">rec ID: {{recId}}</a>
@@ -359,6 +381,24 @@
     {{> template-pager}}
 {{/successful}}
 </script>
+
+<script id="template-carousel" type="x-tmpl-mustache">
+{{#figures}}
+<figure class="carousel-cell">
+    <div class="widget"><button class="carouselOff">x</button></div>
+
+    {{#img}}
+    <img src="../img/bug.gif" width="100%" data-src="{{img1200}}" class="lazyload" data-recid="{{recId}}">
+    {{/img}}
+
+    {{^img}}
+    {{> template-kein-preview}}
+    {{/img}}
+
+    <figcaption>record ID {{recId}}: {{title}}. <a href='{{zenodoRecord}}' target='_blank'>more</a></figcaption>
+</figure>
+{{/figures}}
+</script> 
 
 <!-- <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script> -->
 
