changed input[q] to type text from type search to style better in Safari

--- a/dev/index.html
+++ b/dev/index.html
@@ -73,7 +73,7 @@
                     <div id="ss-container" class="inputs">
                         <div id="ss-help" class="fs-help"></div>
                         <div id="ss-widget" class="fs-widget">
-                            <input type="search" name="q" class="ss" placeholder="search for images"> 
+                            <input type="text" name="q" class="ss" placeholder="search for images"> 
                             <input type="submit" name="go" class="fs-button-primary" value="go">
                         </div>
                     </div>
@@ -293,6 +293,6 @@ window.onload = function() {
 };
 </script>
 
-<script src="//instant.page/3.0.0" type="module" defer integrity="sha384-OeDn4XE77tdHo8pGtE1apMPmAipjoxUQ++eeJa6EtJCfHlvijigWiJpD7VDPWXV1"></script>
+<!-- <script src="//instant.page/3.0.0" type="module" defer integrity="sha384-OeDn4XE77tdHo8pGtE1apMPmAipjoxUQ++eeJa6EtJCfHlvijigWiJpD7VDPWXV1"></script> -->
 </body>
 </html>
