--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
     <link rel="stylesheet" href="../libs/JavaScript-autoComplete/auto-complete.css">
 
-    <link rel="stylesheet" href="css/ocellus-bundle.min.css">
+    <!-- <link rel="stylesheet" href="css/ocellus-bundle.min.css"> -->
+    <link rel="stylesheet" href="css/uglyduck.css">
+    <link rel="stylesheet" href="css/o4-base.css">
+    <link rel="stylesheet" href="css/o4-form.css">
+    <link rel="stylesheet" href="css/o4-images.css">
+    <link rel="stylesheet" href="css/o4-media-queries.css">
 
 </head>
 
@@ -385,7 +390,9 @@
 <script src="../libs/lazysizes.min.js"></script>
 <script src="../libs/JavaScript-autoComplete/auto-complete.min.js"></script>
 
-<script src="js/ocellus-bundle.min.js"></script>
+<!-- <script src="js/ocellus-bundle.min.js"></script> -->
+<script src="js/o4-base.js"></script>
+<script src="js/o4-utils.js"></script>
 
 <script>
     window.onload = function() {
