fixex --webkit-appearance for ios safari

--- a/dev/index.html
+++ b/dev/index.html
@@ -39,20 +39,30 @@
                 <input type="radio" id="resource-1" name="resource" value="images" checked>
                 images
             </label>
+             <!--
+            <label for="resource-2">
+                <input type="radio" id="resource-2" name="resource" value="treatments">
+                treatments
+            </label>
+            <label for="resource-3">
+                <input type="radio" id="resource-3" name="resource" value="citations">
+                citations
+            </label>
+            -->
         </fieldset>
         
         <fieldset>
             <input type="button" name="communitiesChooser" value="⬇︎">
             <input type="text" name="q" placeholder="search for something…" class="nudge"> 
-            <input type="reset" value="x">
+            <input type="reset" value="✖︎">
             <input type="checkbox" name="refreshCache" value="true"> 
             <input type="hidden" name="size" value="30">
             <input type="hidden" name="page" value="1">
-            <input type="submit" id="submit" value="Submit">
+            <input type="submit" id="submit" value="GO">
         </fieldset>
         <div id="throbber" class="nothrob"></div>
 
-        <div id="refreshCache" class="hidden-block warning">This will refresh the cache. You probably don‘t want to do that.</div>
+        <div id="refreshCache" class="hidden-block warning">This'll refresh the cache… probably not what you want</div>
 
         <fieldset id="communitiesChooser" class="hidden-none">
             <legend>Communities</legend>
