fixed broken link to zenodo record

--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="2020-02-04 18:35:00">
+    <meta name="date" content="%date%">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" href="../img/ocellus.png">
 
     <link rel="stylesheet" href="../libs/JavaScript-autoComplete/auto-complete.css">
-
+    <!-- build:css css/ocellus.css -->
     <link rel="stylesheet" href="css/uglyduck.css">
     <link rel="stylesheet" href="css/o4-base.css">
     <link rel="stylesheet" href="css/o4-form.css">
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/o4-treatments.css">
     <link rel="stylesheet" href="css/o4-citations.css">
     <link rel="stylesheet" href="css/o4-media-queries.css">
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -397,7 +398,7 @@
 <script src="../libs/lazysizes.min.js"></script>
 <script src="../libs/JavaScript-autoComplete/auto-complete.min.js"></script>
 
-<!-- build:js -->
+<!-- build:js js/ocellus.min.js -->
 <script src="js/o4-base.js"></script>
 <script src="js/o4-utils.js"></script>
 <!-- endbuild -->
