--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="2020-02-04 18:35:00">
+    <meta name="date" content="Sun Mar 01 2020 15:55:34 GMT+0100 (Central European Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -15,14 +15,7 @@
     <link rel="icon" type="image/png" href="../img/ocellus.png">
 
     <link rel="stylesheet" href="../libs/JavaScript-autoComplete/auto-complete.css">
-
-    <link rel="stylesheet" href="css/uglyduck.css">
-    <link rel="stylesheet" href="css/o4-base.css">
-    <link rel="stylesheet" href="css/o4-form.css">
-    <link rel="stylesheet" href="css/o4-images.css">
-    <link rel="stylesheet" href="css/o4-treatments.css">
-    <link rel="stylesheet" href="css/o4-citations.css">
-    <link rel="stylesheet" href="css/o4-media-queries.css">
+    <link rel="stylesheet" href="css/ocellus.css">
 </head>
 
 <body>
@@ -397,7 +390,7 @@
 <script src="../libs/lazysizes.min.js"></script>
 <script src="../libs/JavaScript-autoComplete/auto-complete.min.js"></script>
 
-<script src="js/ocellus-bundle.min.js"></script>
+<script src="js/ocellus.min.js"></script>
 
 <script>
     window.onload = function() {
