fixed message when no records found

--- a/dev/index.html
+++ b/dev/index.html
@@ -155,7 +155,7 @@
 </script>
 
 <script id="template-records-found" type="x-tmpl-mustache">
-<p id="records-found" class="records-found">{{niceNumbers}} {{resource}} found where {{{search-criteria-text}}}{{#successful}}… {{shown}}.{{/successful}}</p>
+<p id="records-found" class="records-found">{{niceNumbers}} {{resource}} found where {{{search-criteria-text}}}{{#successful}}… {{shown}}{{/successful}}.</p>
 </script>
 
 <script id="template-figures-old" type="x-tmpl-mustache">
