--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Sun Mar 01 2020 15:55:34 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Mon Mar 16 2020 14:15:53 GMT+0100 (Central European Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -147,7 +147,7 @@
 </script>
 
 <script id="template-records-found" type="x-tmpl-mustache">
-<p id="records-found" class="records-found">{{niceNumbers}} {{resource}} found where {{{search-criteria-text}}}{{#successful}}… {{shown}}.{{/successful}}</p>
+<p id="records-found" class="records-found">{{niceNumbers}} {{resource}} found where {{{search-criteria-text}}}{{#successful}}… {{shown}}{{/successful}}.</p>
 </script>
 
 <script id="template-figures-old" type="x-tmpl-mustache">
