turned off treatments and citations search

--- a/dev/index.html
+++ b/dev/index.html
@@ -39,14 +39,14 @@
                 <input type="radio" id="resource-1" name="resource" value="images" checked>
                 images
             </label>
-            <label for="resource-2">
+            <!-- <label for="resource-2">
                 <input type="radio" id="resource-2" name="resource" value="treatments">
                 treatments
             </label>
             <label for="resource-3">
                 <input type="radio" id="resource-3" name="resource" value="citations">
                 citations
-            </label>
+            </label> -->
         </fieldset>
         
         <fieldset>
