--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Mon Mar 16 2020 14:15:53 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Mon Mar 16 2020 15:12:46 GMT+0100 (Central European Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -31,14 +31,14 @@
                 <input type="radio" id="resource-1" name="resource" value="images" checked>
                 images
             </label>
-            <label for="resource-2">
+            <!-- <label for="resource-2">
                 <input type="radio" id="resource-2" name="resource" value="treatments">
                 treatments
             </label>
             <label for="resource-3">
                 <input type="radio" id="resource-3" name="resource" value="citations">
                 citations
-            </label>
+            </label> -->
         </fieldset>
         
         <fieldset>
