added sub-head 'a plazi project'

--- a/dev/index.html
+++ b/dev/index.html
@@ -30,6 +30,7 @@
     
 <header>
     <a href="index.html" class="title">Ocellus</a><sup>4</sup><br>
+    <h2 class="small">a plazi project</h2>
     <a href="about.html" class="modal-open sub-title">about</a>
 
     <form id="searcher" class="hidden-none" action="">
@@ -60,7 +61,7 @@
         </fieldset>
         <div id="throbber" class="nothrob"></div>
 
-        <div id="refreshCache" class="hidden-block warning">This'll refresh the cache… probably not what you want</div>
+        <div id="refreshCache" class="hidden-block warning">This’ll refresh the cache… probably not what you want</div>
 
         <fieldset id="communitiesChooser" class="hidden-none">
             <legend>Communities</legend>
