--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     
 <header>
     <a href="index.html" class="title">Ocellus</a><sup>4</sup><br>
+    <h2 class="small">a plazi project</h2>
     <a href="about.html" class="modal-open sub-title">about</a>
 
     <form id="searcher" class="hidden-none" action="">
