--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Mon Mar 16 2020 15:12:46 GMT+0100 (Central European Standard Time)">
+    <meta name="date" content="Thu May 07 2020 16:21:46 GMT+0200 (Central European Summer Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -53,7 +53,7 @@
         </fieldset>
         <div id="throbber" class="nothrob"></div>
 
-        <div id="refreshCache" class="hidden-block warning">This'll refresh the cache… probably not what you want</div>
+        <div id="refreshCache" class="hidden-block warning">This’ll refresh the cache… probably not what you want</div>
 
         <fieldset id="communitiesChooser" class="hidden-none">
             <legend>Communities</legend>
