fixed the header style

--- a/dev/index.html
+++ b/dev/index.html
@@ -29,7 +29,7 @@
 <body>
     
 <header>
-    <a href="index.html" class="title">Ocellus</a><sup>4</sup><br>
+    <h1><a href="index.html" class="title">ocellus</a><sup>4</sup></h1>
     <h2 class="small">a plazi project</h2>
     <a href="about.html" class="modal-open sub-title">about</a>
 
