--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Fri May 08 2020 14:20:18 GMT+0200 (Central European Summer Time)">
+    <meta name="date" content="Fri May 08 2020 14:35:22 GMT+0200 (Central European Summer Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -21,7 +21,7 @@
 <body>
     
 <header>
-    <a href="index.html" class="title">Ocellus</a><sup>4</sup><br>
+    <h1><a href="index.html" class="title">ocellus</a><sup>4</sup></h1>
     <h2 class="small">a plazi project</h2>
     <a href="about.html" class="modal-open sub-title">about</a>
 
