fixed close button on images; gulping properly

--- a/4t.html
+++ b/4t.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0T">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Thu Nov 12 2020 09:22:39 GMT+0530 (India Standard Time)">
+    <meta name="date" content="Thu Nov 12 2020 15:10:18 GMT+0530 (India Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
 
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css">
     
-    <link rel="stylesheet" href="css/o4t.css">
+    <link rel="stylesheet" href="css/o4t.min.css">
 
 </head>
 
