--- a/dev/4t.html
+++ b/dev/4t.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="/node_modules/@sn8z/pop-pop.css/dist/pop-pop.min.css">
     
-    <!-- build:css css/o4t.css -->
+    <!-- build:css -->
     <link rel="stylesheet" href="css/uglyduck.css">
     <link rel="stylesheet" href="css/o4t-base.css">
     <link rel="stylesheet" href="css/o4t-header.css">
@@ -46,7 +46,6 @@
                 <span id="refreshCacheWrapper" aria-label="refresh cache" data-pop="top" data-pop-no-shadow data-pop-arrow>
                     <input name="refreshCache" id="refreshCache" type="checkbox" value="true" class="unchecked">
                 </span>
-                <!-- <input name="refreshCache" id="refreshCache" type="checkbox" value="true" class="unchecked" aria-label="refresh cache" data-pop="top" data-pop-no-shadow data-pop-arrow> -->
 
                 <span id="clearQ" class="removeClick" aria-label="clear input" data-pop="top" data-pop-no-shadow data-pop-arrow>&times;</span>
             </div>
@@ -130,12 +129,11 @@
 
 <footer><img src="../img/fish.jpg"></footer>
 
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script> -->
 <script src="/node_modules/picolog/dist/picolog.min.js"></script>
 <script src="/js/config.js"></script>
 <script src="../libs/lazysizes.min.js"></script>
 
-<!-- build:js js/o4t.min.js -->
+<!-- build:js -->
 <script src="js/o4t-ng.js"></script>
 <script src="js/o4t-pager.js"></script>
 <!-- endbuild -->
