fixed regression of slide out captions not working

--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../libs/JavaScript-autoComplete/auto-complete.css">
 
-    <!-- build:css css/ocellus.css -->
+    <!-- build:css -->
     <link rel="stylesheet" href="css/uglyduck.css">
     <link rel="stylesheet" href="css/o4-base.css">
     <link rel="stylesheet" href="css/o4-form.css">
@@ -394,7 +394,7 @@
 <script src="../libs/lazysizes.min.js"></script>
 <script src="../libs/JavaScript-autoComplete/auto-complete.min.js"></script>
 
-<!-- build:js js/ocellus.min.js -->
+<!-- build:js -->
 <script src="js/o4-base.js"></script>
 <script src="js/o4-utils.js"></script>
 <!-- endbuild -->
