--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="version" content="4.0">
     <meta name="author" content="Puneet Kishor">
     <meta name="copyright" content="CC0 Public Domain Dedication">
-    <meta name="date" content="Thu Nov 12 2020 09:22:39 GMT+0530 (India Standard Time)">
+    <meta name="date" content="Fri Dec 25 2020 12:37:42 GMT+0530 (India Standard Time)">
 
     <meta http-equiv="Cache-Control" content="max-age=604800, public">
     
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../libs/JavaScript-autoComplete/auto-complete.css">
 
-    <link rel="stylesheet" href="css/ocellus.css">
+    <link rel="stylesheet" href="css/o4.min.css">
     
 </head>
 
@@ -386,7 +386,7 @@
 <script src="../libs/lazysizes.min.js"></script>
 <script src="../libs/JavaScript-autoComplete/auto-complete.min.js"></script>
 
-<script src="js/ocellus.min.js"></script>
+<script src="js/o4.min.js"></script>
 
 <script>
     window.onload = function() {
